--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "handlebars-loader": "^1.7.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.99.9"
   }
 }
