--- a/package.json
+++ b/package.json
@@ -40,39 +40,45 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.45.0",
     "@tanstack-query-firebase/react": "^1.0.5",
-    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query": "^5.81.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.7.0",
+    "framer-motion": "^12.19.1",
     "geist": "^1.3.1",
     "glob": "^10.0.0",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.475.0",
     "next": "^15.3.2",
+    "next-themes": "^0.4.6",
     "patch-package": "^8.0.0",
+    "query-string": "^9.2.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.58.1",
+    "react-hotkeys-hook": "^5.1.0",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.1",
     "rimraf": "^5.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "genkit-cli": "^1.8.0",
     "gh-pages": "^6.1.1",
     "handlebars-loader": "^1.7.3",
     "postcss": "^8",
+    "shx": "^0.3.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "webpack": "^5.99.9",
-    "shx": "^0.3.4"
+    "webpack": "^5.99.9"
   }
 }
